--- a/yaml/app-secret-env.yaml
+++ b/yaml/app-secret-env.yaml
@@ -1,41 +1,28 @@
 apiVersion: v1
+kind: Pod
+metadata:
+  name: app-with-secret
+spec:
+  containers:
+    - name: app-container
+      image: nginx:latest
+      env:
+        - name: SECRET_USERNAME
+          valueFrom:
+            secretKeyRef:
+              name: my-secret
+              key: username
+        - name: SECRET_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: my-secret
+              key: password
+---
+apiVersion: v1
 kind: Secret
 metadata:
-  name: app-secret
+  name: my-secret
 type: Opaque
 data:
-  USERNAME: YWRtaW4=    # "admin" base64 encoded
-  PASSWORD: c2VjcmV0    # "secret" base64 encoded
----
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: nginx-deployment-secret
-  labels:
-    app: nginx-secret
-spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: nginx-secret
-  template:
-    metadata:
-      labels:
-        app: nginx-secret
-    spec:
-      containers:
-      - name: nginx
-        image: nginx:latest
-        ports:
-        - containerPort: 80
-        env:
-        - name: USERNAME
-          valueFrom:
-            secretKeyRef:
-              name: app-secret
-              key: USERNAME
-        - name: PASSWORD
-          valueFrom:
-            secretKeyRef:
-              name: app-secret
-              key: PASSWORD
+  username: YWRtaW4=   # admin (base64)
+  password: cGFzc3dvcmQ=   # password (base64)
