--- a/yaml/app-volumeMounts.yaml
+++ b/yaml/app-volumeMounts.yaml
@@ -1,39 +1,14 @@
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: nginx-deployment-volumes
-  labels:
-    app: nginx-volumes
-spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: nginx-volumes
-  template:
-    metadata:
-      labels:
-        app: nginx-volumes
-    spec:
-      containers:
-      - name: nginx
-        image: nginx:latest
-        ports:
-        - containerPort: 80
-        volumeMounts:
-        - name: nginx-html
-          mountPath: /usr/share/nginx/html
-      volumes:
-      - name: nginx-html
-        configMap:
-          name: nginx-html-config
----
 apiVersion: v1
-kind: ConfigMap
+kind: Pod
 metadata:
-  name: nginx-html-config
-data:
-  index.html: |
-    <html>
-      <head><title>K8s Volume Mount</title></head>
-      <body><h1>Hello from Volume!</h1></body>
-    </html>
+  name: app-with-volume
+spec:
+  containers:
+    - name: app-container
+      image: nginx:latest
+      volumeMounts:
+        - name: app-storage
+          mountPath: /usr/share/nginx/html
+  volumes:
+    - name: app-storage
+      emptyDir: {}
