--- a/yaml/app-secret-env.yaml
+++ b/yaml/app-secret-env.yaml
@@ -4,8 +4,8 @@ metadata:
   name: my-secret
 type: Opaque
 data:
-  username: YWRtaW4=    # admin (base64)
-  password: cGFzc3dvcmQ=   # password (base64)
+  username: YWRtaW4=        # admin
+  password: cGFzc3dvcmQ=    # password
 ---
 apiVersion: v1
 kind: Pod
