--- a/yaml/app-secret-env.yaml
+++ b/yaml/app-secret-env.yaml
@@ -1,11 +1,13 @@
+---
 apiVersion: v1
 kind: Secret
 metadata:
   name: my-secret
 type: Opaque
 data:
-  username: YWRtaW4=        # admin
-  password: cGFzc3dvcmQ=    # password
+  username: YWRtaW4=
+  password: cGFzc3dvcmQ=
+
 ---
 apiVersion: v1
 kind: Pod
