--- a/yaml/app-secret-env.yaml
+++ b/yaml/app-secret-env.yaml
@@ -1,29 +1,118 @@
 ---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: go-demo-app-secrets
+  labels:
+    app: go-demo-app-secrets
+spec:
+  replicas: 3
+  selector:
+    matchLabels:
+      app: go-demo-app-secrets
+  template:
+    metadata:
+      labels:
+        app: go-demo-app-secrets
+    spec:
+      containers:
+        - name: go-demo-app
+          image: go-demo-app:latest
+          ports:
+            - containerPort: 8080
+          env:
+            - name: PORT
+              value: "8080"
+            - name: APP_ENV
+              value: "production"
+            - name: APP_NAME
+              valueFrom:
+                configMapKeyRef:
+                  name: go-demo-app-config
+                  key: app_name
+            - name: DATABASE_URL
+              valueFrom:
+                secretKeyRef:
+                  name: go-demo-app-secrets
+                  key: database_url
+            - name: POD_NAME
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.name
+          envFrom:
+            - configMapRef:
+                name: go-demo-app-env-config
+            - secretRef:
+                name: go-demo-app-env-secrets
+          volumeMounts:
+            - name: secret-volume
+              mountPath: /etc/secrets
+              readOnly: true
+      volumes:
+        - name: secret-volume
+          secret:
+            secretName: go-demo-app-file-secrets
+---
 apiVersion: v1
 kind: Secret
 metadata:
-  name: my-secret
+  name: go-demo-app-secrets
+  labels:
+    app: go-demo-app-secrets
 type: Opaque
 data:
-  username: YWRtaW4=
-  password: cGFzc3dvcmQ=
+  database_url: cG9zdGdyZXNxbDovL2FwcA==
+  api_secret_key: YWJjZGVmZ2hpams=
 ---
 apiVersion: v1
-kind: Pod
+kind: Secret
 metadata:
-  name: app-with-secret
+  name: go-demo-app-env-secrets
+  labels:
+    app: go-demo-app-secrets
+type: Opaque
+data:
+  OAUTH_SECRET: b2F1dGhjbGllbnQ=
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: go-demo-app-file-secrets
+  labels:
+    app: go-demo-app-secrets
+type: Opaque
+data:
+  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0t
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: go-demo-app-config
+  labels:
+    app: go-demo-app-secrets
+data:
+  app_name: "go-demo-app"
+  app_version: "v1.0.0"
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: go-demo-app-env-config
+  labels:
+    app: go-demo-app-secrets
+data:
+  CACHE_TTL: "3600"
+  RATE_LIMIT: "1000"
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: go-demo-app-secrets-service
+  labels:
+    app: go-demo-app-secrets
 spec:
-  containers:
-    - name: app-container
-      image: nginx:latest
-      env:
-        - name: SECRET_USERNAME
-          valueFrom:
-            secretKeyRef:
-              name: my-secret
-              key: username
-        - name: SECRET_PASSWORD
-          valueFrom:
-            secretKeyRef:
-              name: my-secret
-              key: password
+  selector:
+    app: go-demo-app-secrets
+  ports:
+    - port: 80
+      targetPort: 8080
