--- a/yaml/app-multicontainer.yaml
+++ b/yaml/app-multicontainer.yaml
@@ -1,15 +1,60 @@
-apiVersion: v1
-kind: Pod
+---
+apiVersion: apps/v1
+kind: Deployment
 metadata:
-  name: multi-container-pod
+  name: go-demo-app-multicontainer
   labels:
-    app: multi-container
+    app: go-demo-app-multicontainer
 spec:
-  containers:
-  - name: nginx
-    image: nginx:latest
-    ports:
-    - containerPort: 80
-  - name: sidecar
-    image: busybox:latest
-    command: ["/bin/sh", "-c", "while true; do echo Sidecar logging...; sleep 10; done"]
+  replicas: 2
+  selector:
+    matchLabels:
+      app: go-demo-app-multicontainer
+  template:
+    metadata:
+      labels:
+        app: go-demo-app-multicontainer
+    spec:
+      initContainers:
+        - name: init-database
+          image: alpine:3.18
+          command:
+            - /bin/sh
+            - -c
+            - echo "Database ready"
+      containers:
+        - name: go-demo-app
+          image: go-demo-app:latest
+          ports:
+            - containerPort: 8080
+          volumeMounts:
+            - name: shared-logs
+              mountPath: /var/log/app
+        - name: log-forwarder
+          image: fluent/fluent-bit:2.1
+          volumeMounts:
+            - name: shared-logs
+              mountPath: /var/log/app
+              readOnly: true
+        - name: metrics-exporter
+          image: prom/node-exporter:v1.6.0
+          ports:
+            - containerPort: 9100
+      volumes:
+        - name: shared-logs
+          emptyDir: {}
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: go-demo-app-multicontainer-service
+  labels:
+    app: go-demo-app-multicontainer
+spec:
+  selector:
+    app: go-demo-app-multicontainer
+  ports:
+    - port: 80
+      targetPort: 8080
+    - port: 9100
+      targetPort: 9100
