--- a/yaml/app-readinessProbe.yaml
+++ b/yaml/app-readinessProbe.yaml
@@ -1,27 +1,47 @@
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nginx-deployment-readiness
+  name: go-demo-app-readiness
   labels:
-    app: nginx-readiness
+    app: go-demo-app-readiness
 spec:
-  replicas: 1
+  replicas: 3
   selector:
     matchLabels:
-      app: nginx-readiness
+      app: go-demo-app-readiness
   template:
     metadata:
       labels:
-        app: nginx-readiness
+        app: go-demo-app-readiness
     spec:
       containers:
-      - name: nginx
-        image: nginx:latest
-        ports:
-        - containerPort: 80
-        readinessProbe:
-          httpGet:
-            path: /
-            port: 80
-          initialDelaySeconds: 5
-          periodSeconds: 10
+        - name: go-demo-app
+          image: go-demo-app:latest
+          ports:
+            - containerPort: 8080
+          readinessProbe:
+            httpGet:
+              path: /ready
+              port: 8080
+            initialDelaySeconds: 10
+            periodSeconds: 5
+          livenessProbe:
+            httpGet:
+              path: /health
+              port: 8080
+            initialDelaySeconds: 30
+            periodSeconds: 10
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: go-demo-app-readiness-service
+  labels:
+    app: go-demo-app-readiness
+spec:
+  selector:
+    app: go-demo-app-readiness
+  ports:
+    - port: 80
+      targetPort: 8080
