--- a/yaml/app-volumeMounts.yaml
+++ b/yaml/app-volumeMounts.yaml
@@ -1,14 +1,76 @@
-apiVersion: v1
-kind: Pod
+---
+apiVersion: apps/v1
+kind: Deployment
 metadata:
-  name: app-with-volume
+  name: go-demo-app-volume
+  labels:
+    app: go-demo-app-volume
 spec:
-  containers:
-    - name: app-container
-      image: nginx:latest
-      volumeMounts:
-        - name: app-storage
-          mountPath: /usr/share/nginx/html
-  volumes:
-    - name: app-storage
-      emptyDir: {}
+  replicas: 2
+  selector:
+    matchLabels:
+      app: go-demo-app-volume
+  template:
+    metadata:
+      labels:
+        app: go-demo-app-volume
+    spec:
+      containers:
+        - name: go-demo-app
+          image: go-demo-app:latest
+          ports:
+            - containerPort: 8080
+          volumeMounts:
+            - name: app-config
+              mountPath: /etc/config
+              readOnly: true
+            - name: app-logs
+              mountPath: /var/log/app
+            - name: app-data
+              mountPath: /app/data
+      volumes:
+        - name: app-config
+          configMap:
+            name: go-demo-app-config
+        - name: app-logs
+          emptyDir: {}
+        - name: app-data
+          persistentVolumeClaim:
+            claimName: go-demo-app-pvc
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: go-demo-app-config
+  labels:
+    app: go-demo-app-volume
+data:
+  app.properties: |
+    server.port=8080
+    logging.level=info
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: go-demo-app-pvc
+  labels:
+    app: go-demo-app-volume
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 5Gi
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: go-demo-app-volume-service
+  labels:
+    app: go-demo-app-volume
+spec:
+  selector:
+    app: go-demo-app-volume
+  ports:
+    - port: 80
+      targetPort: 8080
