--- a/yaml/app.yaml
+++ b/yaml/app.yaml
@@ -1,10 +1,57 @@
-apiVersion: v1
-kind: Pod
+---
+apiVersion: apps/v1
+kind: Deployment
 metadata:
-  name: simple-app
+  name: go-demo-app
+  namespace: default
+  labels:
+    app: go-demo-app
+    version: v1.0.0
+    environment: production
 spec:
-  containers:
-    - name: simple-app-container
-      image: nginx:latest
-      ports:
-        - containerPort: 80
+  replicas: 3
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxUnavailable: 1
+      maxSurge: 1
+  selector:
+    matchLabels:
+      app: go-demo-app
+  template:
+    metadata:
+      labels:
+        app: go-demo-app
+        version: v1.0.0
+    spec:
+      containers:
+        - name: go-demo-app
+          image: go-demo-app:latest
+          ports:
+            - containerPort: 8080
+              name: http
+              protocol: TCP
+          env:
+            - name: PORT
+              value: "8080"
+            - name: APP_ENV
+              value: "production"
+      restartPolicy: Always
+      terminationGracePeriodSeconds: 30
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: go-demo-app-service
+  namespace: default
+  labels:
+    app: go-demo-app
+spec:
+  type: ClusterIP
+  ports:
+    - port: 80
+      targetPort: 8080
+      protocol: TCP
+      name: http
+  selector:
+    app: go-demo-app
